examples/codegen/effects/state.an
effect Use a =
    get: fn Unit -> a
    set: fn a -> Unit

use_state (y: I32) {Use I32} =
    x = get ()
    set (x + y)
    state = get ()
    println "Ending state = ${state}"

state (f: fn {Use s} -> a) (initial: s) {Copy s}: a =
    var current = initial
    handler h for
    | get () -> resume current
    | set new_state ->
        current := new_state
        resume ()
    in f {h}

main () =
    state (use_state 10 {_}) 1
    state (fn h -> use_state 20 {h}) 2

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/state.an:5:21
//   | // error: This is an effect and cannot be used as an ordinary type
// 5 | use_state (y: I32) {Use I32} =
//   |                     ^^^^^^^
// 6 |     x = get ()
// 
// examples/codegen/effects/state.an:6:9
// 5 | use_state (y: I32) {Use I32} =
// 6 |     x = get ()	// error: This can perform <(Use _), _> but only <> is allowed here
//   |         ^^^
// 7 |     set (x + y)
// 
// examples/codegen/effects/state.an:7:5
// 6 |     x = get ()
// 7 |     set (x + y)	// error: This can perform <(Use _), _> but only <> is allowed here
//   |     ^^^
// 8 |     state = get ()
// 
// examples/codegen/effects/state.an:8:13
//  7 |     set (x + y)
//  8 |     state = get ()	// error: This can perform <(Use _), _> but only <> is allowed here
//    |             ^^^
//  9 |     println "Ending state = ${state}"
// 
// examples/codegen/effects/state.an:9:13
//  8 |     state = get ()
//    |     // error: Multiple matching implicits found for type Cast _ String required by cast: cast_i32_string, cast_same
//  9 |     println "Ending state = ${state}"
//    |             ^^^^^^^^^^^^^^^^^^^^^^^^^
// 
// examples/codegen/effects/state.an:11:15
//    | // error: This is an effect and cannot be used as an ordinary type
// 11 | state (f: fn {Use s} -> a) (initial: s) {Copy s}: a =
//    |               ^^^^^
// 12 |     var current = initial
// 
// examples/codegen/effects/state.an:18:11
// 17 |         resume ()
// 18 |     in f {h}	// error: Argument 1 has type <(Use s)> but Use s was expected
//    |           ^
// 
// Found 7 errors and 0 warnings

